Proofread and corrected blog post.

--- a/_posts/2015-11-11-1.1.0-released.md
+++ b/_posts/2015-11-11-1.1.0-released.md
@@ -7,35 +7,35 @@ version: 1.1.0
 categories: [release]
 ---
 
-Round about 9 month after we've released 1.0.0 and 10.000+ downloads later, we finally finished version 1.1.0 containing many intersting and new features.
+Approximately 9 months after we released appserver version 1.0.0 and 10.000+ downloads later, we're proud to announce the GA release of our next major point release of appserver. Version 1.1.0 "Iron Knight". This new version contains many bug fixes and a number of new and very interesting features.
 
-Beside many bugfixes and refactoring, "Iron Knight" comes with some new and helpful features. The following list gives you a short overview about what features version 1.1.0 come with:
+The following list is a short overview of the great additions you will get with version 1.1.0 "Iron Knight":
 
-* PHP 5.6.x
-* Runlevel
-* Management Console (Terminal) - Experimental
-* CRON
-* Multiple SSL Certificates per IP
-* Proxy Modul
-* AutoIndex Modul
-* Headers Modul
-* Application Configuration
-* Doctrine Integration (@PersistenceUnit annotation)
+* Powered with PHP 5.6.x
+* Runlevels
+* Management Console (Terminal) - Currently Experimental
+* A CRON system 
+* Multiple SSL Certificates possible per IP
+* A Proxy Module
+* An AutoIndex Module
+* A Headers Module
+* New Application Configuration
+* Complete Doctrine Integration (@PersistenceUnit annotation)
 * Lifecycle Callbacks for SFSB (@PostDetach, @PreAttach)
 
-You can find a detailed overview of all fixed bugs and closed issues on our [Github Releases](https://github.com/appserver-io/appserver/releases) page.
+You can find a detailed overview of all the fixed bugs and closed issues on our [Github Releases](https://github.com/appserver-io/appserver/releases) page.
 
-## Plattform
+## Platform
 
-As plattform, we define the PHP runtime version and the main daemon, that starts all other services, servers and finally the applications. The following updates and features are part of 1.1.0 aka the "Iron Knight" plattform.
+Since appserver is a full stack platform, we define the PHP runtime version and the main daemon, which starts all other services, servers and finally the applications. The following updates and features are part of 1.1.0 "Iron Knight" platform.
 
 ### PHP 5.6.x
 
-Version 1.1.x is, as defined in [issue #683](https://github.com/appserver-io/appserver/issues/683), based on PHP 5.6.x and contains many security patches and performance improvements as well as a whole bunch of new functionaliy.
+Version 1.1.x is, as defined in [issue #683](https://github.com/appserver-io/appserver/issues/683), now based on PHP 5.6.x and contains many security patches and performance improvements, as well as a whole bunch of new PHP functionality.
 
 ### Runlevels
 
-The latest version of appserver.io also comes with completely refactored boostrap process, separated in seven modes of operation, called [Runlevels](https://github.com/appserver-io/appserver/issues/761).
+The latest version of appserver.io also comes with a completely refactored and improved boostrap process, which is now separated in seven modes of operation, called [Runlevels](https://github.com/appserver-io/appserver/issues/761). Below is a list of the different levels:
 
 ID | Name               | Description
 ---|--------------------|-----------------------------------------
@@ -44,10 +44,10 @@ ID | Name               | Description
  2 | Daemon             | Start the Core Daemons
  3 | Networking         | Start the Containers
  4 | Secure             | Secure the Application Server
- 5 | Full               | Initialise and Start the Applications
+ 5 | Full               | Initialize and Start the Applications
  6 | Restart            | Restart the Application Server
 
-When appserver.io starts, for examle by invoking `service appserver start` on a Linux system's console, Runlevel `5` will be executed. Therefore, all previous Runlevles are synchronously executed before, whereas
+When appserver.io is started, by invoking `service appserver start` on a Linux system's console, Runlevel `5` will be executed. But, prior to this initial server start, all previous Runlevels are actually synchronously executed, whereas
 
 * runlevel 1 loads the system configuration and start's the base system
 * runlevel 2 start's the core daemons e. g. the telnet console
@@ -55,22 +55,22 @@ When appserver.io starts, for examle by invoking `service appserver start` on a 
 * runlevel 4 secures the servers by switching to the configured group and user
 * runlevel 5 finally bootstraps and start's the deployed applications
 
-The boostrap process now uses events to enable developers writing their own functionality, which usually will be listeners, that will be invoked while executing the available runlevels. These events can simply be configured by the `etc/appserver/conf.d/bootstrap.xml` file. Additionally there are separate configuration files, one for the watcher daemon `etc/appserver/conf.d/boostrap-watcher.xml` and one for the setup command `etc/appserver/conf.d/bootstrap-command.xml`.
+This new boostrap process now uses events, which allows developers, who want to create their own startup functionality, to hook into the runlevel processes to execute their code within the required runlevel. These events can be easily configured through the `etc/appserver/conf.d/bootstrap.xml` file. Additionally, there are separate configuration files for the watcher daemon `etc/appserver/conf.d/boostrap-watcher.xml` and the setup command `etc/appserver/conf.d/bootstrap-command.xml`.
 
 ### Management Console (Experimental)
 
-You may ask yourself, how you can switch between the runlevels. The OS specific init scripts allows you to start/stop or restart appserver.io only. The Managment Console enables developers or admins to login to a instance and to execute commands, like to switch between the runlevels.
+You may be asking yourself, is it possible to switch between the runlevels? Yes, it is! With version 1.1.0, the OS specific init scripts only allowed you to start/stop or restart appserver.io. Now, the Management Console enables developers or admins to login to an instance and allows them to execute various commands, like switching between the runlevels.
 
-This feature has been planned in issue [#763](https://github.com/appserver-io/appserver/issues/763) and specifies a Management Console that allows to execute commands on a internal commandline.
+This feature had been planned in issue [#763](https://github.com/appserver-io/appserver/issues/763) and specifies a Management Console that allows the execution of commands on an internal commandline.
 
-The Management Console is experimental and in a pre-alpha stage. So switching between the runlevels using the `init` command is, beside the `exit` command, the only functionality that works in version 1.1.0. Basically, the Management Console supports different protocols, whereas only the Telnet based implementation is working now, but we've plans to integrate a SSH console in one of the next releases and extend the functionality e. g. with the following commands
+The Management Console is currently experimental and in a pre-alpha stage. This means switching between the runlevels using the `init` command, along with the `exit` command, are the only functionality available currently with version 1.1.0. The Management Console supports different protocols, however only the Telnet based implementation is operational. We plan to integrate an SSH console in one of the future releases. We will also be extending the functionality. The list below shows a few examples of some of the up and coming commands, which will be made available over the Management Console:
 
 * `su`: Switching the user
 * `top`: Overview all threads with required memory and CPU time
 * `status`: Textual overview about the server status
 * `service`: Start and stop container, servers and applications
 
-The Management Console can be configured in the main configuration file `etc/appserver/appserver.xml`. By default, the Telnet based implementation is activated
+The Management Console can be configured through the main configuration file `etc/appserver/appserver.xml`. By default, the Telnet based implementation is activated
 
 ```xml
 ...
@@ -87,13 +87,13 @@ The Management Console can be configured in the main configuration file `etc/app
 </consoles>
 ...
 ```
-and listens to local port `9023`. This can be deactivated or customized, as the Management Console is actually for testing purposes only.
+In the configuration above, the Management Console will listen to local port `9023`. This can be deactivated or customized, as the Management Console is currently for testing purposes only.
 
 ### CRON
 
-The new [CRON](https://github.com/appserver-io/appserver/pull/838) functionality can replace the system CRON in many cases. It allows admins to configure CRON jobs globally or developers to deliver their CRON job configuration with their application. The global CRON job configuration can be done in `etc/appserver/conf.d/cron.xml`, whereas the configuration file of an application has to be located in `META-INF/cron.xml`.
+The new [CRON](https://github.com/appserver-io/appserver/pull/838) functionality can replace the regular system CRON. It allows admins to configure CRON jobs globally. The main advantage of the appserver CRON is to allow developers to deliver their CRON job configuration along with their appserver applications. The global CRON job configuration can be found and modified under `etc/appserver/conf.d/cron.xml`, whereas the application specific CRON configuration files will be located under `META-INF/cron.xml`.
 
-For example, a simple CRON configuration that writes the actual PHP version to the `var/log/php_errors.log` file can look like this
+Below is a simple example showing a CRON configuration, which writes the actual PHP version to the `var/log/php_errors.log`:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -111,15 +111,15 @@ For example, a simple CRON configuration that writes the actual PHP version to t
 </cron>
 ```
 
-You can find more informations about CRON job configuration in our [documentation](<{{ "/get-started/documentation/1.1/configuration.html#cron" | prepend: site.baseurl }}>).
+You can find more information about CRON job configuration in our [configuration documentation](<{{ "/get-started/documentation/1.1/configuration.html#cron" | prepend: site.baseurl }}>).
 
-## Webserver
+## Webserver improvements
 
-Beside the improvements of the plattform, also the webserver make some major steps forward to a fully featured HTTP 1.1 compliant webserver. 
+In addition to the improvements made to the general appserver platform, we've also invested a good bit of work to offer a fully featured HTTP 1.1 compliant webserver with appserver. 
 
 ### Multiple SSL Certificates per IP
 
-As PHP 5.6.x allows to bind Multiple SSL Certificates per IP. Up with version 1.1.x appserver.io also enables this feature by a simple configuration option, e. g. by simply adding the following lines to a server configuration
+Since PHP 5.6.x allows to bind Multiple SSL Certificates to a single IP, we've passed on this functionality to you. With version 1.1.x appserver.io, you can enable this feature through a simple configuration option. Simply add the following lines to a server configuration:
 
 ```xml
 ...
@@ -129,13 +129,13 @@ As PHP 5.6.x allows to bind Multiple SSL Certificates per IP. Up with version 1.
 </certificates>
 ...
 ```
-For more details about SSL configuration, have a look at our [documentation](<{{ "/get-started/documentation/1.1/configuration.html#server-configuration" | prepend: site.baseurl }}>).
+For more details about SSL configuration, please refer to our [server configuration documentation](<{{ "/get-started/documentation/1.1/configuration.html#server-configuration" | prepend: site.baseurl }}>).
 
-### Proxy Modul
+### Proxy Module
 
-The [Proxy Module](https://github.com/appserver-io/appserver/issues/200) provides full proxy functionality by supporting user defined logic in upstream types which can be used for implementing custom behaviour (e. g. load-balancing, round-roubin etc.).
+The [Proxy Module](https://github.com/appserver-io/appserver/issues/200) provides full proxy functionality by supporting user defined logic in upstream types, which can be used for implementing custom behavior (e. g. load-balancing, HTTP caching, etc.).
 
-The proxy configuration consists of two parts. The first is part of the container configuration. So, if you want to proxy a local Apache instance you have to configure the upstream server like
+The proxy configuration consists of two parts. The first part is within the container configuration. As an example, if you want to proxy a local Apache instance, you have to configure the upstream server as follows:
 
 ```xml
 ...
@@ -160,7 +160,7 @@ The proxy configuration consists of two parts. The first is part of the containe
 ...
 ```
 
-The second is part of the server configuration, that uses the configured upstream server. So if your application has a folder `test` and the requests should be handled by the Apache instance we configured before, you can simply add a locaction with a file handler that forwards the requests, like this 
+The second part of the proxy configuration is found in the server configuration, which uses the configured upstream server. So, if your application has a folder `test`, and the requests should be handled by the Apache instance we configured before, you simply need to add a location with a file handler, which will forward the requests. Something like this: 
 
 ```xml
 ...
@@ -179,11 +179,11 @@ The second is part of the server configuration, that uses the configured upstrea
 ...
 ```
 
-You can find more informations about the Proxy Module configuration in our [documentation](<{{ "/get-started/documentation/1.1/webserver.html#proxy" | prepend: site.baseurl }}>).
+You can find more information about the Proxy Module configuration in our [webserver documentation](<{{ "/get-started/documentation/1.1/webserver.html#proxy" | prepend: site.baseurl }}>).
 
-### Auto Index Modul
+### Auto Index Module
 
-The Auto Index Module, defined with issue [700](https://github.com/appserver-io/appserver/issues/700), enables auto generation of directory index on server, virtual host level or location level. The configuration is pretty simple, as only one parameter needs to be set to `true`. If, for example, the auto index functionality has to be enabled for a complete server, simply set the parameter `autoIndex` it in the `etc/appserver/appserver.xml` file to `true`. This could look like
+The Auto Index Module, defined with issue [700](https://github.com/appserver-io/appserver/issues/700), enables auto generation of directory index on server, virtual host level or location level. The configuration is pretty simple, as only one parameter needs to be set to `true`. If, for example, the auto index functionality has to be enabled for a complete server, simply set the parameter `autoIndex` in the `etc/appserver/appserver.xml` file to `true`. This is what it would look like:
 
 ```xml
 ...
@@ -198,17 +198,17 @@ The Auto Index Module, defined with issue [700](https://github.com/appserver-io/
 </server>
 ```
 
-After restarting the application server, and pointing the browser to the directory autoindexing is enabled for, a page similar to
+After restarting the application server and pointing the browser to the directory, autoindexing is enabled. You should see a page similar to the image below:
 
 ![Auto Index Module]({{ "/assets/img/posts/autoindex_module.png" | prepend: site.baseurl }} "You successfully configured the Auto Index Module")
 
-should be rendered. It is also possible to customize the layout by set the parameter `autoIndexTemplatePath` to a different template, that will be used to render the generated page.
+It is also possible to customize the layout by setting the parameter `autoIndexTemplatePath` to a different template, which will be used to render the generated page.
 
-Read a more detailed description about the AutoIndex Module configuration in our [documentation](<{{ "/get-started/documentation/1.1/webserver.html#auto-index" | prepend: site.baseurl }}>).
+You can read a more detailed description about the AutoIndex Module configuration in our [webserver documentation](<{{ "/get-started/documentation/1.1/webserver.html#auto-index" | prepend: site.baseurl }}>).
 
 ### Headers Module
 
-The Headers Module allows admins and developers to override of, or append headers to, the response. This can, as configuration for most of the other modules, be done on server, virtual host or location level. To change the response header with the server signature, simply add the following lines to the server configuration
+The Headers Module allows admins and developers to append or override the response headers. This feature can be, as is the case with the configuration for most of the other modules, be done on server, virtual host or location level. To change the response header with the server signature, simply add the following lines to the server configuration:
 
 ```xml
 ...
@@ -218,17 +218,17 @@ The Headers Module allows admins and developers to override of, or append header
 ...
 ```
 
-Read a more detailed description about the Headers Module configuration in our [documentation](<{{ "/get-started/documentation/1.1/webserver.html#headers" | prepend: site.baseurl }}>).
+For a more detailed description about the Headers Module configuration, please refer to our [webserver documentation](<{{ "/get-started/documentation/1.1/webserver.html#headers" | prepend: site.baseurl }}>).
 
 ## Application Server
 
-Finally we released some important enhancements for the application server itself, which have a major impact on how applications can be build and what configuration options are available.
+Finally, we released some important enhancements for the application server itself. These new and important feature have a major impact on how applications can be build and what configuration options are available.
 
 ### Application Configuration
 
-A frequently requested and helpful new option is the possibility to deliver nearly all parameters of the server or virtual host configuration with the application itself. This means that, up with version 1.1.0, applications can define their own servers and virtual hosts as well as they can override existing ones. This feature is enabled by default, but can be deactivated by a simple flag in the main server configuration, e. g. for a production environment.
+A frequently requested and helpful new option is the possibility to access nearly all of the server or virtual host configuration parameters within the application itself. This means applications can define their own servers and virtual hosts, as well as override existing ones. This feature is enabled by default, but can be deactivated with a simple flag in the main server configuration, e. g. for a production environment.
 
-The new configuration options has to be declared in XML files and these are, as the main application configuration `context.xml`, located in the application's `META-INF` directory.
+The new configuration options have to be declared in XML files and these are, as the main application configuration `context.xml`, which is located in the application's `META-INF` directory.
 
 To deliver a simple virtual host configuration with an application, the file `containers.xml` in the applications `META-INF` directory needs the following content  
 
@@ -252,19 +252,19 @@ To deliver a simple virtual host configuration with an application, the file `co
 </containers>
 ```
 
-As a virtual host is always bound to server, it is necessary to specify the container and the server name by the apropriate attributes.
+As a virtual host is always bound to a server, it is necessary to specify the container and the server name through the appropriate attributes.
 
-Beside the possiblity to configure/override server and virtual host configurations, a developer can also deliver a CRON configuration with his application, as described in section [CRON](#cron).
+In addition to the ability to configure/override server and virtual host configurations, a developer can also deliver a CRON configuration with his application, as described in the [CRON section above](#cron).
 
-You can find more informations about Application Configuration in our [documentation](<{{ "/get-started/documentation/1.1/configuration.html#application-configuration" | prepend: site.baseurl }}>). 
+You can find more informations about Application Configuration in our [configuration documentation](<{{ "/get-started/documentation/1.1/configuration.html#application-configuration" | prepend: site.baseurl }}>). 
 
 ### Doctrine Integration (@PersistenceUnit annotation)
 
-Version 1.1.0 introduces a [seamless Doctrine integration](https://github.com/appserver-io/appserver/issues/819). The integration consists of three parts. The first part are the `Datasources` which describes the connection to a database. The second part are the `Persistence Units` that describes the `Entity Manager` and the `Datasource` to be use. The third part are the Annotations used to inject the `Entity Manager` instance into the application's components.
+Version 1.1.0 introduces a [seamless Doctrine integration](https://github.com/appserver-io/appserver/issues/819). The integration consists of three parts. The first part entails the `Datasources`, which describe the connection to a database. The second part entails the `Persistence Units`, which describe the `Entity Manager` and the `Datasource` to be used. The third part entails the Annotations used to inject the `Entity Manager` instance into the application's components.
 
-As `Datasources` have already been available since version 1.0.0, there was no clear concept when an how to use it. In our example application we demonstrated one possible way to use a `Datasource` to instanciate a Doctrine `Enitity Manager` instance. Since version 1.1.0, `Persistence Units` can be configured, to reference datasources. This allows us to declare a `Persistence Unit` in a XML file `META-INF/persistence.xml`. This can be used by DI, via the `@PersistencUnit` annotation, to let the container inject a `Entity Manager` instance into an application's components.
+As `Datasources` have already been available since version 1.0.0, there was no clear concept when and how to use it. In our example application we demonstrated one possible way to use a `Datasource` to instantiate a Doctrine `Enitity Manager` instance. Since version 1.1.0, `Persistence Units` can be configured to reference datasources. This allows us to declare a `Persistence Unit` in an XML file `META-INF/persistence.xml`. This can be used by DI, via the `@PersistencUnit` annotation, to let the container inject an `Entity Manager` instance into an application's components.
 
-A short example would give a brief introduction how things will work in combination. First we define a `Datasource` describing a connection to a SQLite database, located in a file `META-INF/test-ds.xml` with the following lines
+The short example below gives a brief introduction on how things will work. First, we define a `Datasource` describing a connection to a SQLite database, located in a file `META-INF/test-ds.xml` with the following lines:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -307,7 +307,7 @@ The next step is to define the `Persistence Unit`. The file also has to be locat
 </persistence>
 ```
 
-The `Persistence Unit` references the `Datasource` with the value of the attribute `name` of the `datasource` node. These are the necessary step to make a `Entity Manager` instance available in an application. To use the instance, e. g. in a `Stateless Session Bean`, a simple annotation is quite enough
+The `Persistence Unit` references the `Datasource` with the value of the attribute `name` of the `datasource` node. These simple steps are all that is needed to build an `Entity Manager` instance and make it available within an application. In order to use the EM instance, e. g. in a `Stateless Session Bean`, a simple annotation is added to the bean, as shown below: 
 
 ```php
 <?php
@@ -339,13 +339,13 @@ class MyStatelessSessionBean
 }
 ```
 
-That's all! More information is available in our [documentation](<{{ "/get-started/documentation/1.1/persistence-container.html#persistence-manager" | prepend: site.baseurl }}>). 
+That's it! More information is available in our [persistence container documentation](<{{ "/get-started/documentation/1.1/persistence-container.html#persistence-manager" | prepend: site.baseurl }}>). 
 
 ### Lifecycle Callbacks for SFSB (@PostDetach, @PreAttach)
 
-Finally we've added two new [Lifecycle Callbacks](https://github.com/appserver-io/appserver/issues/809) that enables a developer to execute code, before a `Stateful Session Bean (SFSB)` will be re-attached to the `Persistence Manager` or after it'll be loaded from.
+Last, but not least, we've added two new [Lifecycle Callbacks for Stateful Session Beans](https://github.com/appserver-io/appserver/issues/809), which enables a developer to execute code, before a `Stateful Session Bean (SFSB)` is re-attached to the `Persistence Manager` or after it is unloaded.
 
-The `Lifecycle Callbacks` can be annotated by the `@PostDetach` and the `@PreAttach` annotations, each on one of the a `SFSBs` methods. These methods are useful, if a developer want to use not serializable resources in a `SFSB`, e. g. a database connection.
+The `Lifecycle Callbacks` can be annotated with the `@PostDetach` and the `@PreAttach` annotations on one of the a `SFSBs` methods. These methods are useful, when a developer doesn't want to use serializable resources in an `SFSB`, for example, with a database connection.
 
 The following example show's how `Lifecycle Callbacks` can be annotated
 
@@ -375,12 +375,12 @@ class MyStatefulSessionBean
 }
 ```
 
-Read more about the available `Lifecycle Callbacks` and how they can be used in our [documentation](<{{ "/get-started/documentation/1.1/persistence-container.html#lifecycle-callbacks" | prepend: site.baseurl }}>).
+To read more about the `Lifecycle Callbacks` available in appserver and how they can be used, please refer back to our [persistence container documentation](<{{ "/get-started/documentation/1.1/persistence-container.html#lifecycle-callbacks" | prepend: site.baseurl }}>).
 
 ## Conclusion
 
-"Iron Knight" provides easy to use solutions for some of the most discussed problems of version 1.0.x. As meanwhile there are production systems out there, we're and will be focused on giving developers the tools, they need to build high performance und rock solid web apps.
+Wir proud of the work done to the newest version of appserver, "Iron Knight". It provides easy to use solutions for some of the most discussed problems of version 1.0.x. We will continue to be focused on giving developers the best tools available to build high performance and rock solid PHP web applications.
 
-As this blog post only gives a short introduction of the new features and documentation is sometimes hard to read, we've extended our example application with examples of the functionality described above. So if you're looking for best practices or how to's, have a look at the [example application](https://github.com/appserver-io-apps/example) that is, as well delivered with version 1.1.0.
+Since this blog post only gives a short introduction to the new features and because we know reading and understanding documentation isn't everyone's cup of tea, we've extended our example application with examples of all the new functionality described above. So, if you're looking for best practices or how to's, please have a look at the [example application](https://github.com/appserver-io-apps/example), which is also installed with our 1.1.0 Iron Knight release.
 
-If you have any additional questions, feel free to contact us on our well frequented [Gitter](https://gitter.im/appserver-io/appserver) chat. You're always welcome! 
+If you have any additional questions or feedback, feel free to contact us on our well frequented [Gitter](https://gitter.im/appserver-io/appserver) chat room. We'd love to hear from you! 
