Small changes to the 1.1.0 release post. Should be the last PR.

--- a/_posts/2015-11-11-1.1.0-released.md
+++ b/_posts/2015-11-11-1.1.0-released.md
@@ -222,13 +222,13 @@ For a more detailed description about the Headers Module configuration, please r
 
 ## Application Server
 
-Finally, we released some important enhancements for the application server itself. These new and important feature have a major impact on how applications can be build and what configuration options are available.
+Finally, we released some important enhancements for the application server itself. These new and important features have a major impact on how applications can be built and what configuration options are available.
 
 ### Application Configuration
 
 A frequently requested and helpful new option is the possibility to access nearly all of the server or virtual host configuration parameters within the application itself. This means applications can define their own servers and virtual hosts, as well as override existing ones. This feature is enabled by default, but can be deactivated with a simple flag in the main server configuration, e. g. for a production environment.
 
-The new configuration options have to be declared in XML files and these are, as the main application configuration `context.xml`, which is located in the application's `META-INF` directory.
+These new configuration options have to be declared in new XML files (`containers.xml` and `cron.xml`) and are located in the application’s META-INF directory.
 
 To deliver a simple virtual host configuration with an application, the file `containers.xml` in the applications `META-INF` directory needs the following content  
 
